<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Victim">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="419dp"
        android:layout_height="731dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/victim" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="409dp"
        android:layout_height="190dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash" />

    <Button
        android:id="@+id/button6"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/new_compliant"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        android:textColorHighlight="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="@string/my_compliants"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button9"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="@string/my_profile"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button10"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="@string/sign_out"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

</androidx.constraintlayout.widget.ConstraintLayout>